# monitor

./: .gitignore  list_displays.py  preset_manager.py  presets.json  start.bat  start.ps1
.claude/: launch.json
monitor-rs/: Cargo.toml
monitor-rs/crates/monitor-core/: Cargo.toml
monitor-rs/crates/monitor-core/src/: canvas.rs  compositor.rs  encoder.rs  frame.rs  layer.rs  lib.rs  scene.rs
monitor-rs/crates/monitor-core/src/source/: desktop.rs  image.rs  mod.rs  window.rs
monitor-rs/crates/monitor-platform/: Cargo.toml
monitor-rs/crates/monitor-platform/src/: display.rs  dxgi.rs  lib.rs  process.rs
monitor-rs/crates/monitor-server/: Cargo.toml
monitor-rs/crates/monitor-server/src/: api.rs  config.rs  main.rs  state.rs
