[package]
name = "monitor-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
] }
