[package]
name = "monitor-server"
version = "0.1.0"
edition = "2024"

[dependencies]
monitor-core = { path = "../monitor-core" }
monitor-platform = { path = "../monitor-platform" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
